--- a/greenly/src/app/components/footer/footer.component.html
+++ b/greenly/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
       <h1 class="fs-3 w-75 special-font">Greenly</h1>
       <div>
         <h2 class="fs-6">Helwan University, Helwan, Cairo, Egypt</h2>
-        <h3 class="fs-6 w-50">Greenly&#64;graduation.com +1 (234) 567-8900</h3>
+        <h3 class="fs-6 w-50">Greenlyenvironment&#64;gmail.com +20 101 733 1037</h3>
       </div>
       <div>
         <span class="mb-2 d-block">We accept</span>
