--- a/greenly/src/app/components/cart/cart.component.html
+++ b/greenly/src/app/components/cart/cart.component.html
@@ -44,7 +44,7 @@
                     <div class="d-flex justify-content-between align-items-start mb-3">
                       <h2 class="product-title special-font mb-0">{{product.productId.name}}</h2>
                       <div class="product-price">
-                        <span class="current-price">{{product.productId.price | currency : "GBP"}}</span>
+                        <span class="current-price">{{(product.productId.price*product.quantity) | currency : "GBP"}}</span>
                       </div>
                     </div>
                     
